--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ a.title-button {
 }
 
 .stories-container {
-  column-count: 5;
-  column-gap: 1.25rem;
+  /* column-count: 5;
+  column-gap: 1.25rem; */
 }
 
 .story-card {
