--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,25 @@ a.title-button {
 }
 
 .stories-container {
-  /* column-count: 5;
-  column-gap: 1.25rem; */
+  padding: 5px;
+  display: table;
+  width: 100%;
 }
 
 .story-card {
-  width: 100%;
-  display: inline-block;
   border: ridge;
+  display: table-row;
+  height: 100px;
+  padding: 2px;
+}
+
+.card-img-top {
+  width: 522px;
+  display: table-cell;
+}
+
+.card-body {
+  margin-left: 50%;
+  display: table-cell;
+  vertical-align: middle;
 }
